# rust_learning_chat_app

./: Cargo.toml  README.md  index.html
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
html/: index.html
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
