[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.3", features = ["ws"]}
axum-macros =  "0.4.0"
futures = "0.3.30"
rand = "0.8"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
tokio = {version = "1.35.1", features = ["full"]}
tower = {version = "0.4", features = ["util"]}



[dev-dependencies]
rand = "0.8"
